@@ -307,6 +307,9 @@ Changes since 1.5.1
 - Added support for passing in a context object to some of the 
   GTMNSEnumerator+Filter routines.
 
+- Fixed up bug in GTMFileSystemKQueue where we were passing the kqueue argument
+  in incorrectly. Added appropriate tests.
+
 
 Release 1.5.1
 Changes since 1.5.0
